syntax = "proto3";

option go_package = "./pb";

package pb;

service Commission {
  // 拉取用户佣金
  rpc FetchUserCommission(FetchUserCommissionArgs) returns (FetchUserCommissionReply) {}
  
}

message FetchUserCommissionArgs {
   int64 UID = 1; //用户UID
}

message FetchUserCommissionReply {
  int64 UID = 1; //用户UID
}